# assignment-4-patricereneeemery

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  full-test.sh  runqemu.sh  save-config.sh  unit-test.sh
.github/workflows/: assignment-3-part-1.yml  buildroot-test.yml  github-actions.yml
assignment-3-part-1/: systemcalls.c
assignment-3-part-1/conf/: username.txt
assignment-3-part-1/finder-app/: manual-linux.sh
assignment-3-part-2-backup/finder-app/: manual-linux.sh
assignment-3-part-2/finder-app/: Makefile  finder.sh  manual-linux.sh  start-qemu-app.sh  writer.c  writer.sh
assignment-autotest/: CMakeLists.txt  sockettest.sh
assignment-autotest/Unity/: CMakeLists.txt
assignment-autotest/Unity/src/: unity.c  unity.h
assignment-autotest/src/: test_runner.c  test_runner.h
assignment-autotest/test/assignment4/: assignment4-part1.sh
assignment1/finder-app/: Makefile  finder-test.sh  finder.sh  writer.sh
assignment1/student-test/: Test_validate_username.c
assignment2/: fileresult.txt
assignment4/: CMakeLists.txt  manual-linux.sh
assignment4/threading/: threading.c
assignment5/: writer.sh
backup_root_files/finder-app/: writer.c
base_external/: Config.in  external.desc  external.mk
base_external/configs/: aesd_defconfig
base_external/package/: Config.in
buildroot/configs/: aesd_defconfig
conf/: aesd_buildroot_defconfig
finder-app/: Makefile  autorun-qemu.sh  finder-app-cross-compile.sh  finder.sh  manual-linux.sh  start-qemu-app.sh  writer.c  writer.sh
server/: Makefile  aesdsocket  aesdsocket.c
(+11 files in other folders)
